codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_bt.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 9630
expression: terminal.backend()
---
"› /btw  start a side conversation in an ephemeral fork      "
"▌                                                           "
"▌ /bt                                                       "
"▌                                                           "
"                                         100% context left  "
